--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-email/components": "^0.0.19",
     "@react-email/tailwind": "^0.0.18",
+    "@vercel/analytics": "^1.4.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
     "next": "14.2.4",
