--- a/package.json
+++ b/package.json
@@ -9,29 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-email/components": "^0.0.19",
-    "@react-email/tailwind": "^0.0.18",
-    "@vercel/analytics": "^1.4.1",
+    "@react-email/components": "^0.0.33",
+    "@react-email/tailwind": "^1.0.4",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.2.10",
-    "next": "14.2.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.2.1",
-    "react-intersection-observer": "^9.10.3",
+    "framer-motion": "^12.4.7",
+    "next": "^15.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.15.1",
     "react-vertical-timeline-component": "^3.6.0",
-    "resend": "^3.3.0"
+    "resend": "^4.1.2"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^22",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@types/react-vertical-timeline-component": "^3.3.6",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4",
+    "eslint": "^9",
+    "eslint-config-next": "15.2.0",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.0.9",
     "typescript": "^5"
   }
 }
