--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -24,14 +24,15 @@
     "resend": "^4.1.2"
   },
   "devDependencies": {
-    "@types/node": "^22",
+    "@tailwindcss/postcss": "^4.0.0",
+    "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-vertical-timeline-component": "^3.3.6",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "postcss": "^8",
-    "tailwindcss": "^4.0.9",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5"
   }
 }
