--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.6",
     "@react-email/components": "^0.0.35",
     "@react-email/tailwind": "^1.0.4",
     "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.7",
     "graphql": "^16.10.0",
-    "graphql-request": "^7.1.2",
     "i": "^0.3.7",
     "next": "^15.2.0",
     "npm": "^11.2.0",
