--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.15.1",
-    "react-markdown": "^10.1.0",
-    "remark-gfm": "^4.0.1",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "resend": "^4.1.2"
   },
   "devDependencies": {
