--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
     "@apollo/client": "^3.13.6",
     "@react-email/components": "^0.0.35",
     "@react-email/tailwind": "^1.0.4",
+    "@tailwindcss/typography": "^0.5.16",
     "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.7",
     "graphql": "^16.10.0",
-    "i": "^0.3.7",
     "next": "^15.2.0",
-    "npm": "^11.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.15.1",
-    "remark": "^15.0.1",
-    "remark-html": "^16.0.1",
+    "react-markdown": "^10.1.0",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "resend": "^4.1.2"
   },
   "devDependencies": {
