--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.13.6",
     "@react-email/components": "^0.0.35",
     "@react-email/tailwind": "^1.0.4",
     "@tailwindcss/typography": "^0.5.16",
@@ -17,6 +16,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.7",
     "graphql": "^16.10.0",
+    "graphql-request": "^7.1.2",
     "next": "^15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
